--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dialog
-version: 0.1.0+3
+version: 0.2.0-dev
 description: Modern alert, confirm and prompt dialog implementation. NOT WORKING YET
 author: Pavel Dvořák
 homepage: https://github.com/dvorapa/dialog-dart
