--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dialog
-version: 0.4.0
+version: 0.4.0+1
 description: Modern alert, confirm and prompt dialog implementation
 author: Pavel Dvořák <dvorapa1995@gmail.com>
 homepage: https://github.com/dvorapa/dialog-dart
