--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: dialog
-version: 0.4.0+2
+version: 0.4.1
 description: Modern alert, confirm and prompt dialog implementation
 author: Pavel Dvořák <dvorapa1995@gmail.com>
 homepage: https://github.com/dvorapa/dialog-dart
-documentation: http://www.dartdocs.org/documentation/dialog/latest/index.html#dialog
+documentation:
 environment:
   sdk: ">=1.11.1 <2.0.0"
 dependencies:
