--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: dialog
-version: 0.5.0
+version: 0.6.0
 description: Modern alert, confirm and prompt dialog implementation
 author: Pavel Dvořák <dvorapa1995@gmail.com>
 homepage: https://github.com/dvorapa/dialog-dart
 documentation:
 environment:
-  sdk: ">=1.11.1 <2.0.0"
-dependencies:
-  browser: ">=0.10.0 <0.11.0"
+  sdk: ">=1.11.1 <3.0.0"
+dev_dependencies:
+  build_runner: ^0.10.0
+  build_web_compilers: ^0.4.0
