--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/dvorapa/dialog-dart
 author: Pavel Dvořák <dvorapa1995@gmail.com>
 
 environment:
-  sdk: ^2.0.0
+  sdk: ">=2.0.0 <3.0.0"
 
 dev_dependencies:
   build_runner: ^1.6.2
