--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dialog
 description: Modern modal dialog implementation containing remakes of alert & confirm dialogs supplemented by prompt & custom modal dialogs
-version: 0.7.2
+version: 0.7.2+1
 homepage: https://github.com/dvorapa/dialog-dart
 author: Pavel Dvořák <dvorapa1995@gmail.com>
 
