--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,13 @@
 name: dialog
 description: Modern modal dialog implementation containing remakes of alert & confirm dialogs supplemented by prompt & custom modal dialogs
-version: 0.7.2+1
+version: 0.8.0
 homepage: https://github.com/dvorapa/dialog-dart
-author: Pavel Dvořák <dvorapa1995@gmail.com>
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+
 
 dev_dependencies:
-  build_runner: ^1.6.2
-  build_web_compilers: ^2.0.0
+  build_runner: ^2.1.5
+  build_web_compilers: ^3.2.1
+  lints: ^1.0.1
